[package]
name = "shell-lang"
version = "0.0.1"
authors = ["Ivan Petkov <ivanppetkov@gmail.com>"]

[features]
runtime = ["glob", "lazy_static", "libc", "winapi", "kernel32-sys"]

[dependencies]
void         = "1"
clippy       = { version = "^0.0", optional = true }
glob         = { version = "0.2",  optional = true }
lazy_static  = { version = "0.2",  optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
kernel32-sys = { version = "0.2.1",  optional = true }
winapi       = { version = "0.2.5",  optional = true }

[dev-dependencies]
tempdir = "0.3"
